samples/_failures_safe/1761791749_3c721c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b922887c.c:96: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_b922887c.c:27:28: note: to match this ‘{’
   27 | Transition transitions[] = {
      |                            ^
